--- a/index.html
+++ b/index.html
@@ -1034,7 +1034,7 @@
         const chatSend = document.getElementById('chat-send');
 
         // Groq API Configuration
-        const apiKey = "GROQ_API_KEY";
+        const apiKey = process.env.GROQ_API_KEY;
 
         async function callGroqAPI(promptText, systemInstructionText = "") {
             const url = "https://api.groq.com/openai/v1/chat/completions";
@@ -1188,4 +1188,5 @@
 
 
 </html>
+
 
