--- a/index.html
+++ b/index.html
@@ -1034,7 +1034,7 @@
         const chatSend = document.getElementById('chat-send');
 
         // Groq API Configuration
-        const apiKey = process.env.GROQ_API_KEY;
+        const apiKey = "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";
 
         async function callGroqAPI(promptText, systemInstructionText = "") {
             const url = "https://api.groq.com/openai/v1/chat/completions";
@@ -1188,5 +1188,6 @@
 
 
 </html>
+
 
 
